data/derived/sp14/progs/unify/prog2292.ml.out
Characters 64-68:
  let x = rand(1,3) in build(rand, 1);;
                             ^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type int
